--- a/postgresql/templates/pg_hba.conf.erb
+++ b/postgresql/templates/pg_hba.conf.erb
@@ -87,7 +87,7 @@ local   all             postgres                                md5
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-local   all             all                                     <%= method %>
+local   all             all                                     <%= pgmethod %>
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            md5
 # IPv6 local connections:
